added defualt prop

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-            <title>Thoughts</title>
+            <title>Decision</title>
     </head>
     
     <body>
